k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: k8s-web-service

spec:
  selector:
    app: k8s-web

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
